# fediy

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  IDEAS.md  INSTALL.md  README.md  TODO.md  db.sql  install.sh  seastar.md  vim
git_module/: Contrib.hpp  Contributors.hpp  GitRepo.hpp  Org.hpp  README.md  Repo.hpp  User.hpp  db.sql  gitlocal.cpp  mod.cpp  protocol.hpp
js_protocol_server/: package-lock.json  package.json
mail_mod/: MailBox.hpp  README.md  compose.html  mod.cpp
modlib/: DecisionTree.hpp  Module.cpp  Module.hpp  ModuleInfo.hpp  ModuleIpc.hpp  ModuleManager.hpp  Msg.hpp  SDK.hpp  example_mod.c  example_mod.cpp  fediymod.h  mod.c  mod.cpp
portal_frontend/: apps.html  login.html  main.js  settings.html  signin.html  signup.html  template.html
protocol/: App.cpp  App.hpp  Auth.cpp  Auth.hpp  Cache.cpp  Cache.hpp  Config.cpp  Config.hpp  DB.cpp  DB.hpp  DataDir.hpp  LocalUser.cpp  LocalUser.hpp  Mod.cpp  Mod.hpp  ModIPC.cpp  ModIPC.hpp  ModMgr.cpp  ModMgr.hpp  Mods.cpp  Mods.hpp  Module.cpp  Module.hpp  ModuleInfo.hpp  ModuleIpc.hpp  ModuleManager.cpp  ModuleManager.hpp  Msg.hpp  Pages.cpp  Pages.hpp  Peer.hpp  Peers.cpp  Peers.hpp  ProtocolActions.cpp  ProtocolActions.hpp  Server.cpp  Server.hpp  User.hpp  db.sql  globals.hpp  (+5 more)
protocol/HTTPRoutes/: ModuleRoutes.cpp  ModuleRoutes.hpp  PeerRoutes.cpp  PeerRoutes.hpp  PortalRoutes.cpp  PortalRoutes.hpp
src/: UserConfig.hpp  defs.hpp  gitrepo.hpp  repo.hpp  validate.hpp
util/: BackgroundProcess.cpp  BackgroundProcess.hpp  DecisionTree.hpp  RWMutex.hpp  defs.hpp  parse_cookie_header.hpp
